# Triple-C

./: AI_USAGE.md  CMakeList.txt  CMakeLists.txt  README.md
headers/: entidades.hpp  juego.hpp  mapa.hpp  movi.h  peguntas.h  preg.hpp  preguntas.h
src/headers/: preguntas.h
src/main/: main.c
src/mov/: player.h
src/mov/Primeraspruebas/logica vectores y mapa/: Proyectini.c  movimiento.c  pruebaray.c
src/mov/Primeraspruebas/logica vectores y mapa/Logicavectores/: movimiento.h
src/mov/Primeraspruebas/logica vectores y mapa/Primeraspruebas/: main.c  mapa.c  mapa.h
src/mov/mov.c/: entidades.cpp  juego.cpp  mapa.cpp  movi.c  movi.h  newprueba.c  prueba.c  pruebam.c  pruebita.cpp
src/preguntas/: archivopregs.txt  enginePreg.c  pregBack.cpp  pruebasPreg.c
src_cpp/headerscpp/: entidades.hpp  juego.hpp  mainwindow.h  mapa.hpp  mapitawidget.h  preg.hpp  uireal.hpp
src_cpp/maincpp/: main.cpp  pruebaPreg.cpp
src_cpp/movcpp/: entidades.cpp  juego.cpp  mapa.cpp  mapitawidget.cpp
src_cpp/preguntascpp/: pregBack.cpp
src_cpp/userinterface/: mainwindow.cpp  mainwindow.ui  menureal.cpp  pantallasreal.cpp  uireal.hpp
src_cppQT/headers/: entidades.hpp  juego.hpp  mapitawidget.h  preg.hpp
src_cppQT/qt/: TRIPLEC_FINGRAFICS.pro
src_cppQT/sources/: entidades.cpp  juego.cpp  main.cpp  mainpruebamov.cpp  mapitawidget.cpp  pregBack.cpp
